Fix weird spacing on flashcard activity

--- a/src/components/Flashcard/Flashcard.css
+++ b/src/components/Flashcard/Flashcard.css
@@ -3,19 +3,31 @@
   flex-direction: column;
   justify-content: center;
   height: auto;
-  border: 1px solid var(--light);
   border-radius: 1vmin;
+  box-shadow: 7px 7px 7px -6px rgba(0,0,0,0.7);
+
+}
+
+.flashcard-back {
+  border: 2px solid var(--teal);
+}
+
+.flashcard-front {
+  border: 2px solid var(--beige-med);
 }
 
 .flashcard-front,
 .flashcard-back {
-  padding-top: 1.5vmin;
+  padding: 4vmin 0;
   width: 100%;
+  height: 18vmin;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   text-align: center;
   font-size: 5vmin;
+  border-radius: 1vmin;
 }
 
 .flashcard-front .pinyin,
@@ -42,13 +54,18 @@
 }
 
 .correct-btn {
-  background-color: var(--green-drk);
-  color: white;
+  border: 2px solid var(--green-drk);
+  color: var(--green-drk);
 }
 
 .incorrect-btn {
-  background-color: var(--red-brick);
-  color: white;
+  border: 2px solid var(--red-brick);
+  color: var(--red-brick);
+}
+
+.correct-btn:hover,
+.incorrect-btn:hover {
+  background-color: white;
 }
 
 .flashcard-icon {
